# pydem

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  setup.py
example/: Snow.ipynb  drop.ipynb
pydem/: CMakeLists.txt  __init__.py  dem.hpp  plots.py  potential.hpp  pydem.cpp  saver.py  utils.py
